2004-01-31  Mitsuru Oka  <oka326@parkcity.ne.jp>

	* src/sp-object.c (sp_object_private_set): Modified to work for
	xml:space attribute unset operation

	* src/xml/repr.h (SPReprXmlSpaceType): New enumeration type
	
	* src/xml/repr.c (sp_repr_get_inherited_attr): New method

	* src/xml/repr-util.c (sp_repr_get_xml_space): New method
	(sp_repr_set_xml_space): New method

	* src/xml/repr-io.c (sp_repr_write_stream): Support XML file
	saving feature for xml:space preserve
	(sp_repr_doc_write_stream): Ditto
	(sp_repr_print): Ditto
	
	* src/sp-text.c (sp_string_read_content): Modified white space
	handling in xml:space compliant manner

2004-01-25  Mitsuru Oka  <oka326@parkcity.ne.jp>

	* src/style.c (trim_space): New function
	(sp_style_merge_from_style_string): Fixed CSS property space
	handling again in bit better way

2004-01-24  Mitsuru Oka  <oka326@parkcity.ne.jp>

	* src/style.c (sp_style_merge_from_style_string): Fixed CSS inline
	style white space handling bug, thanks to rindolf

	* src/svg/svg-path.c (rsvg_path_arc): Added raddi correction
	described in Appendix F 6.6, thanks to Infallible for his patch
	(#882348)

2004-01-23  Mitsuru Oka  <oka326@parkcity.ne.jp>

	* src/libnrtype/nr-glyphs.c (nr_pgl_free): Fixed memory leak

2004-01-21  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/libnr/nr-compose.c (nr_R8G8B8A8_P_R8G8B8A8_P_A8_RGBA32): Added
	missing parentheses, thanks to davej

	* src/sp-gradient.c (sp_stop_write): Fixed &/&& bug,
	thanks to davej

2004-01-20  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/libnr/nr-pathops.c (nr_node_path_rewind): Works

	* src/verbs.h: Added boolean verbs

	* src/interface.c (sp_ui_selection_menu): Added booleans to menu

	* src/path-chemistry.c (sp_selected_path_uncross): Added
	union, intersection and subtraction operations

2004-01-18  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/path-chemistry.c (sp_selected_path_uncross): New method

	* src/interface.c (sp_ui_selection_menu): Added uncross
